--- a/checkout.html
+++ b/checkout.html
@@ -194,6 +194,39 @@
         .payment-method input[type="radio"] {
             display: none;
         }
+
+        .mobile-money-details {
+            margin-top: 1.5rem;
+            padding: 1.5rem;
+            background: rgba(99, 102, 241, 0.05);
+            border-radius: 12px;
+            border: 1px solid rgba(99, 102, 241, 0.2);
+        }
+
+        .mobile-money-info {
+            margin-bottom: 1.5rem;
+            padding: 1rem;
+            background: white;
+            border-radius: 8px;
+            border-left: 4px solid var(--primary);
+        }
+
+        .mobile-money-info h4 {
+            color: var(--primary);
+            margin-bottom: 0.5rem;
+        }
+
+        .mobile-money-info p {
+            color: var(--gray-600);
+            font-size: 0.9rem;
+        }
+
+        .form-group small {
+            display: block;
+            margin-top: 0.25rem;
+            color: var(--gray-500);
+            font-size: 0.85rem;
+        }
         
         .order-summary {
             background: white;
@@ -419,6 +452,7 @@
                             <label for="country">Country *</label>
                             <select id="country" name="country" required>
                                 <option value="">Select Country</option>
+                                <option value="GH" selected>Ghana</option>
                                 <option value="US">United States</option>
                                 <option value="CA">Canada</option>
                                 <option value="UK">United Kingdom</option>
@@ -470,6 +504,21 @@
                             <span>💳</span>
                             <strong>Credit/Debit Card</strong>
                         </div>
+                        <div class="payment-method" onclick="selectPaymentMethod('mtn')">
+                            <input type="radio" name="paymentMethod" value="mtn">
+                            <span>📱</span>
+                            <strong>MTN Mobile Money</strong>
+                        </div>
+                        <div class="payment-method" onclick="selectPaymentMethod('airteltigo')">
+                            <input type="radio" name="paymentMethod" value="airteltigo">
+                            <span>📲</span>
+                            <strong>AirtelTigo Money</strong>
+                        </div>
+                        <div class="payment-method" onclick="selectPaymentMethod('telecel')">
+                            <input type="radio" name="paymentMethod" value="telecel">
+                            <span>💰</span>
+                            <strong>Telecel Cash</strong>
+                        </div>
                         <div class="payment-method" onclick="selectPaymentMethod('paypal')">
                             <input type="radio" name="paymentMethod" value="paypal">
                             <span>🅿️</span>
@@ -507,6 +556,57 @@
                         <div class="form-group">
                             <label for="cardName">Name on Card *</label>
                             <input type="text" id="cardName" name="cardName" placeholder="John Doe">
+                        </div>
+                    </div>
+
+                    <!-- MTN Mobile Money Details -->
+                    <div id="mtn-details" class="mobile-money-details" style="display: none;">
+                        <div class="mobile-money-info">
+                            <h4>📱 MTN Mobile Money Payment</h4>
+                            <p>You will receive a prompt on your phone to complete the payment</p>
+                        </div>
+                        <div class="form-group">
+                            <label for="mtnNumber">MTN Mobile Money Number *</label>
+                            <input type="tel" id="mtnNumber" name="mtnNumber" placeholder="024XXXXXXX or 054XXXXXXX" maxlength="10">
+                            <small>Enter your 10-digit MTN number (024, 025, 053, 054, 055, 059)</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="mtnName">Account Holder Name *</label>
+                            <input type="text" id="mtnName" name="mtnName" placeholder="Full name as registered with MTN">
+                        </div>
+                    </div>
+
+                    <!-- AirtelTigo Money Details -->
+                    <div id="airteltigo-details" class="mobile-money-details" style="display: none;">
+                        <div class="mobile-money-info">
+                            <h4>📲 AirtelTigo Money Payment</h4>
+                            <p>You will receive a USSD prompt to authorize the payment</p>
+                        </div>
+                        <div class="form-group">
+                            <label for="airteltigoNumber">AirtelTigo Money Number *</label>
+                            <input type="tel" id="airteltigoNumber" name="airteltigoNumber" placeholder="026XXXXXXX or 056XXXXXXX" maxlength="10">
+                            <small>Enter your 10-digit AirtelTigo number (026, 027, 056, 057)</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="airteltigoName">Account Holder Name *</label>
+                            <input type="text" id="airteltigoName" name="airteltigoName" placeholder="Full name as registered with AirtelTigo">
+                        </div>
+                    </div>
+
+                    <!-- Telecel Cash Details -->
+                    <div id="telecel-details" class="mobile-money-details" style="display: none;">
+                        <div class="mobile-money-info">
+                            <h4>💰 Telecel Cash Payment</h4>
+                            <p>You will receive an SMS prompt to complete the payment</p>
+                        </div>
+                        <div class="form-group">
+                            <label for="telecelNumber">Telecel Cash Number *</label>
+                            <input type="tel" id="telecelNumber" name="telecelNumber" placeholder="020XXXXXXX or 050XXXXXXX" maxlength="10">
+                            <small>Enter your 10-digit Telecel number (020, 050)</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="telecelName">Account Holder Name *</label>
+                            <input type="text" id="telecelName" name="telecelName" placeholder="Full name as registered with Telecel">
                         </div>
                     </div>
                 </div>
