--- a/signin.html
+++ b/signin.html
@@ -6,25 +6,66 @@
   <title>Sign In - Wood & Whimsy</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  
+  <!-- Firebase Scripts -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+  
+  <!-- Firebase Configuration -->
+  <script>
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAVTV34a0jw5ScKywj-YXy5bt9FG01JBn0",
+      authDomain: "wood12-f40fe.firebaseapp.com",
+      projectId: "wood12-f40fe",
+      storageBucket: "wood12-f40fe.firebasestorage.app",
+      messagingSenderId: "522201725736",
+      appId: "1:522201725736:web:78d597f9d5da25c1dbee1d"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    
+    console.log('Firebase initialized in signin.html');
+  </script>
+  
   <style>
     .auth-container {
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       padding: 20px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .auth-container::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: url('cozy sofa.jpg') center/cover;
+      opacity: 0.1;
+      z-index: 1;
     }
 
     .auth-card {
-      background: white;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(20px);
       border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
       padding: 40px;
       width: 100%;
       max-width: 450px;
       position: relative;
-      overflow: hidden;
+      z-index: 2;
+      border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
     .auth-card::before {
@@ -35,6 +76,7 @@
       right: 0;
       height: 4px;
       background: linear-gradient(90deg, #10b981, #059669);
+      border-radius: 20px 20px 0 0;
     }
 
     .auth-header {
@@ -47,7 +89,206 @@
       align-items: center;
       justify-content: center;
       margin-bottom: 20px;
+      gap: 10px;
     }
+
+    .logo-icon {
+      font-size: 2rem;
+    }
+
+    .logo-text h2 {
+      margin: 0;
+      color: var(--primary);
+      font-size: 1.5rem;
+    }
+
+    .logo-tagline {
+      color: var(--gray-600);
+      font-size: 0.9rem;
+    }
+
+    .auth-title {
+      color: var(--gray-800);
+      font-size: 1.8rem;
+      font-weight: 700;
+      margin: 0 0 10px 0;
+    }
+
+    .auth-subtitle {
+      color: var(--gray-600);
+      margin: 0;
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 8px;
+      color: var(--gray-700);
+      font-weight: 500;
+    }
+
+    .form-group input {
+      width: 100%;
+      padding: 12px 16px;
+      border: 2px solid #e5e7eb;
+      border-radius: 10px;
+      font-size: 1rem;
+      transition: all 0.3s ease;
+      background: white;
+    }
+
+    .form-group input:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 3px rgba(16, 185, 129, 0.1);
+    }
+
+    .password-input-container {
+      position: relative;
+    }
+
+    .password-toggle {
+      position: absolute;
+      right: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 1.2rem;
+    }
+
+    .submit-btn {
+      width: 100%;
+      padding: 14px;
+      background: linear-gradient(135deg, #10b981, #059669);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      margin-bottom: 20px;
+    }
+
+    .submit-btn:hover {
+      background: linear-gradient(135deg, #059669, #047857);
+      transform: translateY(-2px);
+      box-shadow: 0 10px 25px rgba(16, 185, 129, 0.3);
+    }
+
+    .submit-btn:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+      transform: none;
+    }
+
+    .auth-divider {
+      text-align: center;
+      margin: 20px 0;
+      position: relative;
+      color: var(--gray-500);
+    }
+
+    .auth-divider::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      height: 1px;
+      background: #e5e7eb;
+      z-index: 1;
+    }
+
+    .auth-divider span {
+      background: white;
+      padding: 0 15px;
+      position: relative;
+      z-index: 2;
+    }
+
+    .provider-btn {
+      width: 100%;
+      padding: 12px;
+      border: 2px solid #e5e7eb;
+      border-radius: 10px;
+      background: white;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 12px;
+      font-weight: 500;
+    }
+
+    .provider-btn:hover {
+      border-color: var(--primary);
+      background: #f9fafb;
+    }
+
+    .provider-icon {
+      width: 20px;
+      height: 20px;
+    }
+
+    .auth-toggle {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .auth-toggle a {
+      color: var(--primary);
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .auth-toggle a:hover {
+      text-decoration: underline;
+    }
+
+    .back-link {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      color: white;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-weight: 500;
+      z-index: 3;
+      background: rgba(255, 255, 255, 0.2);
+      padding: 8px 16px;
+      border-radius: 25px;
+      backdrop-filter: blur(10px);
+      transition: all 0.3s ease;
+    }
+
+    .back-link:hover {
+      background: rgba(255, 255, 255, 0.3);
+      transform: translateY(-2px);
+    }
+
+    .error-message {
+      background: #fee2e2;
+      color: #dc2626;
+      padding: 12px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      display: none;
+    }
+
+    #recaptcha-container {
+      margin: 20px 0;
+    }
+  </style>
 
     .auth-logo .logo-icon {
       width: 50px;
