added missing files

--- a/cafe.html
+++ b/cafe.html
@@ -136,7 +136,7 @@
         <!-- Coffee & Beverages -->
         <div class="menu-item" data-category="coffee">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?w=400&h=300&fit=crop" alt="Artisan Coffee">
+            <img src="artisan coffee.webp" alt="Artisan Coffee">
             <div class="menu-badge hot">Hot</div>
             <div class="menu-rating">⭐ 4.8</div>
           </div>
@@ -152,7 +152,7 @@
 
         <div class="menu-item" data-category="coffee">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1461023058943-07fcbe16d735?w=400&h=300&fit=crop" alt="Specialty Latte">
+            <img src="atcha latte.png" alt="Specialty Latte">
             <div class="menu-badge popular">Popular</div>
             <div class="menu-rating">⭐ 4.9</div>
           </div>
@@ -168,16 +168,16 @@
 
         <div class="menu-item" data-category="coffee">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1517701604599-bb29b565090c?w=400&h=300&fit=crop" alt="Iced Cold Brew">
+            <img src="Matcha-Latte-001.webp" alt="Matcha Latte">
             <div class="menu-badge cold">Cold</div>
             <div class="menu-rating">⭐ 4.7</div>
           </div>
           <div class="menu-item-content">
-            <h3>Iced Cold Brew</h3>
-            <p>Smooth, refreshing cold-brewed coffee served over ice</p>
+            <h3>Matcha Latte</h3>
+            <p>Premium matcha powder with steamed milk and natural sweetness</p>
             <div class="menu-item-footer">
               <span class="price">₵4.75</span>
-              <button class="order-btn" onclick="addToOrder('Iced Cold Brew', 4.75, this)">Order Now</button>
+              <button class="order-btn" onclick="addToOrder('Matcha Latte', 4.75, this)">Order Now</button>
             </div>
           </div>
         </div>
@@ -185,32 +185,32 @@
         <!-- Pastries & Snacks -->
         <div class="menu-item" data-category="pastries">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?w=400&h=300&fit=crop" alt="Fresh Croissant">
+            <img src="juice.jpg" alt="Fresh Juice">
             <div class="menu-badge fresh">Fresh</div>
             <div class="menu-rating">⭐ 4.6</div>
           </div>
           <div class="menu-item-content">
-            <h3>Fresh Croissant</h3>
-            <p>Buttery, flaky pastry baked fresh daily</p>
+            <h3>Fresh Juice</h3>
+            <p>Freshly squeezed seasonal fruit juices served chilled</p>
             <div class="menu-item-footer">
               <span class="price">₵3.25</span>
-              <button class="order-btn" onclick="addToOrder('Fresh Croissant', 3.25, this)">Order Now</button>
+              <button class="order-btn" onclick="addToOrder('Fresh Juice', 3.25, this)">Order Now</button>
             </div>
           </div>
         </div>
 
         <div class="menu-item" data-category="pastries">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=400&h=300&fit=crop" alt="Artisan Muffin">
+            <img src="avocado toast.jpg" alt="Avocado Toast Premium">
             <div class="menu-badge popular">Popular</div>
             <div class="menu-rating">⭐ 4.8</div>
           </div>
           <div class="menu-item-content">
-            <h3>Artisan Muffin</h3>
-            <p>Moist, flavorful muffins with seasonal ingredients</p>
+            <h3>Premium Avocado Toast</h3>
+            <p>Artisan sourdough with fresh avocado, herbs, and premium toppings</p>
             <div class="menu-item-footer">
               <span class="price">$3.75</span>
-              <button class="order-btn" onclick="addToOrder('Artisan Muffin', 3.75, this)">Order Now</button>
+              <button class="order-btn" onclick="addToOrder('Premium Avocado Toast', 3.75, this)">Order Now</button>
             </div>
           </div>
         </div>
@@ -218,35 +218,21 @@
         <!-- Light Meals -->
         <div class="menu-item" data-category="meals">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1525351484163-7529414344d8?w=400&h=300&fit=crop" alt="Avocado Toast">
+            <img src="signature sandwich.jpg" alt="Signature Sandwich">
             <div class="menu-badge healthy">Healthy</div>
             <div class="menu-rating">⭐ 4.9</div>
           </div>
           <div class="menu-item-content">
-            <h3>Avocado Toast</h3>
-            <p>Fresh avocado on artisan bread with herbs and seasonings</p>
+            <h3>Gourmet Sandwich</h3>
+            <p>House-made artisan sandwich with premium ingredients and fresh bread</p>
             <div class="menu-item-footer">
               <span class="price">$12.50</span>
-              <button class="order-btn" onclick="addToOrder('Avocado Toast', 12.50, this)">Order Now</button>
+              <button class="order-btn" onclick="addToOrder('Gourmet Sandwich', 12.50, this)">Order Now</button>
             </div>
           </div>
         </div>
 
-        <div class="menu-item" data-category="meals">
-          <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1539252554453-80ab65ce3586?w=400&h=300&fit=crop" alt="Signature Sandwich">
-            <div class="menu-badge popular">Popular</div>
-            <div class="menu-rating">⭐ 4.8</div>
-          </div>
-          <div class="menu-item-content">
-            <h3>Signature Sandwich</h3>
-            <p>House-made sandwich with premium ingredients and fresh bread</p>
-            <div class="menu-item-footer">
-              <span class="price">$14.00</span>
-              <button class="order-btn" onclick="addToOrder('Signature Sandwich', 14.00, this)">Order Now</button>
-            </div>
-          </div>
-        </div>
+  
 
         <!-- Ghanaian Cuisine -->
         <div class="menu-item" data-category="ghanaian">
@@ -299,7 +285,7 @@
 
         <div class="menu-item" data-category="ghanaian">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1596040033229-a9821ebd058d?w=400&h=300&fit=crop" alt="Fufu with Light Soup">
+            <img src="fufu.jpg" alt="Fufu with Light Soup">
             <div class="menu-badge hearty">Hearty</div>
             <div class="menu-rating">⭐ 4.9</div>
           </div>
@@ -315,7 +301,7 @@
 
         <div class="menu-item" data-category="ghanaian">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ca4b?w=400&h=300&fit=crop" alt="Red Red">
+            <img src="red red.jpg" alt="Red Red">
             <div class="menu-badge comfort">Comfort Food</div>
             <div class="menu-rating">⭐ 4.7</div>
           </div>
@@ -331,7 +317,7 @@
 
         <div class="menu-item" data-category="ghanaian">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?w=400&h=300&fit=crop" alt="Waakye">
+            <img src="waakye.jpg" alt="Waakye">
             <div class="menu-badge popular">Popular</div>
             <div class="menu-rating">⭐ 4.8</div>
           </div>
@@ -347,7 +333,7 @@
 
         <div class="menu-item" data-category="ghanaian">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1574484284002-952d92456975?w=400&h=300&fit=crop" alt="Kontomire Stew">
+            <img src="kontomire.jpg" alt="Kontomire Stew">
             <div class="menu-badge healthy">Healthy</div>
             <div class="menu-rating">⭐ 4.6</div>
           </div>
@@ -363,7 +349,7 @@
 
         <div class="menu-item" data-category="ghanaian">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1565299507177-b0ac66763828?w=400&h=300&fit=crop" alt="Tuo Zaafi">
+            <img src="Tuo-Zaafi.webp" alt="Tuo Zaafi">
             <div class="menu-badge northern">Northern Special</div>
             <div class="menu-rating">⭐ 4.7</div>
           </div>
@@ -379,7 +365,7 @@
 
         <div class="menu-item" data-category="ghanaian">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1596040033229-a9821ebd058d?w=400&h=300&fit=crop" alt="Groundnut Soup">
+            <img src="groundnut soup.jpg" alt="Groundnut Soup">
             <div class="menu-badge rich">Rich</div>
             <div class="menu-rating">⭐ 4.8</div>
           </div>
@@ -395,7 +381,7 @@
 
         <div class="menu-item" data-category="ghanaian">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1574484284002-952d92456975?w=400&h=300&fit=crop" alt="Okro Stew">
+            <img src="okro stew.jpg" alt="Okro Stew">
             <div class="menu-badge traditional">Traditional</div>
             <div class="menu-rating">⭐ 4.5</div>
           </div>
@@ -411,7 +397,7 @@
 
         <div class="menu-item" data-category="ghanaian">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?w=400&h=300&fit=crop" alt="Kenkey with Fried Fish">
+            <img src="kenkey.jpg" alt="Kenkey with Fried Fish">
             <div class="menu-badge coastal">Coastal Special</div>
             <div class="menu-rating">⭐ 4.6</div>
           </div>
@@ -427,7 +413,7 @@
 
         <div class="menu-item" data-category="ghanaian">
           <div class="menu-item-image">
-            <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ca4b?w=400&h=300&fit=crop" alt="Ampesi">
+            <img src="ampesi.webp" alt="Ampesi">
             <div class="menu-badge simple">Simple & Pure</div>
             <div class="menu-rating">⭐ 4.4</div>
           </div>
